src/pages/css/ProgressPage.css
main {
  display: flex;
  flex-direction: column;
  row-gap: 4em;

  align-items: center;

  margin-left: 4em;
  margin-right: 4em;
  width: auto;
}

h1.progress-page__title {
  top: 0;
  left: 0;

  text-align: left;
  align-self: flex-start;

  width: auto;
  height: auto;
}

div.progress-page__container {
  flex: 1;

  display: flex;
  flex-direction: column;

  height: fit-content;
  width: 50%;
}

form.progress-page__form {
  flex: 0;
  max-width: 100%;

  display: flex;
}

input.progress-page__search-input {
  flex: 1;

  padding: .5em 1em;
  margin-right: .5em;

  color: black;
  background-color: #f7f7f7;

  width: auto;

  font-family: inherit;
  font-size: 1em;

  border-radius: 10px;
  border: solid 1px #e5e5e5;
}

button.progress-page__search-button {
  padding: .5em 1em;

  width:auto;

  color: #f7f7f7;;
  background-color: #a60210;

  font-family: inherit;
  font-size: 1em;

  border-radius: 10px;
  border: none;
}

button:hover.progress-page__search-button {
  color: darkgray;
  background-color: rgb(100, 0, 0);
}

section.progress {
  min-width: 50%;
  height: max-content;

  margin-top: 2em;
}

.progress ul {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(2em, 10em));
  grid-auto-rows: 1fr;

  width: 100%;
  height: auto;
  gap: 2em;

  list-style-type: none;

  padding: 0;
  left: 0;

  border-radius: 10px;
}

.progress ul li {
  padding: .5em;
  width: auto;

  background-color: #f7f7f7;

  border-radius: 10px;
}

.progress h3 {
  text-align: center;

  color: rgb(40, 40, 40);
}

.progress-bar {
  height: .7rem;

  border-radius: 25px;

  background-color: lightgrey;

  margin: 1rem;
}

.progress-bar .bar {
  width: 25%;
  height: .7rem;

  background-color: rgb(40, 40, 40);
}

